Question game file added

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
  
 </head>
 <body>
-  <h3>My Journey</h3>
+  <h3>javascript </h3>
 
-   
+
+ 
+  
+
+<script type="text/javascript" src="/questionGame.js"></script>
+  <!-- <script type="text/javascript" src="/quizGame.js"></script> -->
 <!-- <script type="text/javascript" src="/findAge.js"></script> -->
-<script type="text/javascript" src="/quiz.js"></script>
+<!-- <script type="text/javascript" src="/quiz.js"></script> -->
 <!-- <script type="text/javascript" src="/random.js"></script> -->
 <!-- <script type="text/javascript"  src="/script.js"></script>   -->
+
 </body>
 </html>
